@@ -10,6 +10,9 @@ RUN apt-get update && apt-get install -y curl dnsutils iputils-ping
 RUN mkdir -p /apps/OpsERA/components/ansible-services
 COPY --from=build /home/gradle/src/build/libs/ansible-service-0.0.1-SNAPSHOT.jar /apps/OpsERA/components/ansible-services/ansible-services.jar
 EXPOSE 9080
-ENTRYPOINT java -XX:+UnlockExperimentalVMOptions -XX:+UseCGroupMemoryLimitForHeap -Dspring.profiles.active=$DOCKER_ENV -Djava.security.egd=file:/dev/./urandom -jar /apps/OpsERA/components/ansible-services/ansible-services.jar
-
-
+ENTRYPOINT java \
+            -XshowSettings:vm \
+            -XX:+UseContainerSupport \
+            -Dspring.profiles.active=$DOCKER_ENV \
+            -Djava.security.egd=file:/dev/./urandom \
+            -jar /apps/OpsERA/components/ansible-services/ansible-services.jar
